# storage/api-docs/api-docs.json
@@ -19,6 +19,116 @@
         }
     ],
     "paths": {
+        "/AuthController": {
+            "get": {
+                "tags": [
+                    "Tests"
+                ],
+                "summary": "Create New AuthController ",
+                "description": "Create new Authentification ",
+                "operationId": "Authentification",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
+        "/AuthController/login/{request}": {
+            "get": {
+                "tags": [
+                    "Tests"
+                ],
+                "summary": "Get a JWT",
+                "description": "Returns a new Token ",
+                "operationId": "getAToken",
+                "parameters": [
+                    {
+                        "name": "request",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
+        "/AuthController/register/{request}": {
+            "get": {
+                "tags": [
+                    "Tests"
+                ],
+                "summary": "Register a User",
+                "description": "Returns a new User ",
+                "operationId": "registerAUser",
+                "parameters": [
+                    {
+                        "name": "request",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
         "/film": {
             "get": {
                 "tags": [
